--- a/Aulas/Aula2205_Entity/Aula2205_Entity.csproj
+++ b/Aulas/Aula2205_Entity/Aula2205_Entity.csproj
@@ -25,6 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -160,7 +161,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Atividade.cs" />
+    <Compile Include="Models\Categoria.cs" />
     <Compile Include="Models\DAL\MeuContexto.cs" />
+    <Compile Include="Models\StringLenghtAttribute.cs" />
+    <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
